# ExcelFlow

./: .gitignore  LICENSE  README.md  data.xlsx  pyproject.toml
backend/: requirements.txt
backend/app/: agent.py  excel_utils.py  main.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  ExcelViewer.jsx  FileUpload.jsx
legacy/: app.py
